--- a/designerInfo.html
+++ b/designerInfo.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | OJ Portfolio</title>
+    <title>Designer Info | OJ Portfolio</title>
     <!-- LINK TO EXTERNAL STYLESHEET -->
     <link rel="stylesheet" href="css-assets/styles.css">
     <!-- PRELOADED FONTS -->
@@ -33,8 +33,8 @@
         </div>
         <nav id="topLinks">
             <ul>
-                <li class="currentPage">HOME</li>
-                <li><a href="designerInfo.html">DESIGNER INFO</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li class="currentPage">DESIGNER INFO</li>
                 <li id="dropDown-menu" class="dropdown-wrapper"><a>WORK PORTFOLIO</a>
                     <div class="hover-bridge"></div>
                     <ul class="subMenu_nonActive">
@@ -52,64 +52,42 @@
     </header>
 
     <main>
-        <div id="backgroundBanner">
-            <div class="parallax"></div>
-            <div class="headings_card">
-                <h1>Think <span id="typewriter"></span></h1>
-            </div>
+        <div id="heroBanner">
+            <div class="highlight-box top"></div>
+            <div class="highlight-box bottom"></div>
+            <h1>Let me introduce myself...</h1>
         </div>
+        <div id="about_me-pageBackground">
+            <div class="about_me-headings">
+                <div id="story"> 
+                    <h2>01</h2>
+                    <h3>STORY</h3>
+                    <p class="word-reveal">Hi there, I'm a 24-year-old digital designer from Durban, with a dream of branching out into front-end web development and diving into the world of anime as I focus on 2D character animation. My love for animation started when I was a child. I wasn't very social and had high anxiety levels as a person 'on the spectrum', so film and television became my escape. They were my window to the world and taught me how to communicate. I always hoped to create something that could offer others the same comfort and inspiration that I found in those stories. If my work can make even a small difference in someone else's life, I'll feel like I've served a purpose.</p>
+                </div>
 
-        <!--about blogsite author-->
-        <article id="middleContent">
-            <img src="images/misc_graphics/profile _image.png" alt="Self Portrait">
-            <!--page heading and introduction-->
-            <h1>Well, hello there!</h1>
-            <p>
-                My name is Jess, and I am an aspiring animator and front-end web developer, representing the Oubaitori brand. 
-                <br>
-                <br>
-                The ancient Japanese idiom "Oubaitori" comes from the kanji for four spring-blooming trees: cherry, plum, peach, and apricot. Each tree blooms at its own pace, symbolizing that everyone grows and develops individually. Oubaitori encourages personal growth, celebrating individuality, and avoiding comparisons with others. It emphasizes that, like these trees, each person has a unique journey and distinct contributions.
-                <br>
-                <br>
-                As designer, I believe each work, no matter how different, has its own unique value. There is no single way to be an artist; I embrace new mediums and believe in simplicity and minimalism to highlight the true beauty of the work. 
-                <br>
-                <br>
-                Being quality-driven and detail-oriented, I strive to create exceptional visual experiences. Keen to find out more?
-                <a href="designerInfo.html">Click here...</a> 
-            </p>
-        </article>
+                <div id="expertise">
+                    <h2>02</h2>
+                    <h3>EXPERTISE</h3>
+                    <p class="word-reveal">Up until a year ago I had studied BA in Digital Design at Vega School of Design, where I developed a strong foundation in visual storytelling and a broad skill set ranging from motion graphics to 3D modeling. However, more recently I have spent the past several months applying these skills in the iGaming industry, working within the production space to design marketing assets and integrate game-ready content into development pipelines. Now known for my unique illustrative style and strong foundation in storyboarding, I bring concepts to life through expressive movement and thoughtful design— creating engaging digital experiences across platforms with a detail-oriented approach, a strong work ethic, and a genuine passion for tackling new creative challenges that help me grow and evolve as a designer.
+                    </p>
+                </div>
+                <div id="design_philosophy">
+                    <h2>03</h2>
+                    <h3>DESIGN PHILOSOPHY</h3>
+                    <p class="word-reveal">My design philosophy revolves around creativity, craftsmanship, functionality, and aesthetics. I embrace diversity and innovation, always striving to create designs that leave a lasting impression. For me, design is about more than just looking good — it's about connecting with people on a deeper level and giving my work a sense of purpose.</p>
+                </div>
 
-        <div id="article_links">
-            <h1 class="portfolioHeading">Portfolio Work</h1>
-            <div class="animated-lineHome"></div>
-            <article id="graphic-design" class="image-container">
-                <div id="graphicDesign-img" class="image"></div>
-                <h1 id="topImg-headings">GRAPHIC DESIGN</h1>
-                <h2 id="topImg-subheadings">グラフィックス </h2>
-                <div class="button"><a href="graphicDesign-subPage.html" class="topView">VIEW</a></div>
-            </article>
-            <article id="animation" class="image-container">
-                <div id="animation-img" class="image"></div>
-                <h1 id="topImg-headings">ANIMATION</h1>
-                <h2 id="topImg-subheadings">アニメーション</h2>
-                <div class="button"><a href="animations-subPage.html" class="topView">VIEW</a></div>
-            </article>
-            <article id="photography" class="image-container">
-                <div id="photography-img" class="image"></div>
-                <h1 id="bottomImg-headings">PHOTOGRAPHY</h1>
-                <h2 id="bottomImg-subheadings">写真撮影</h2>
-                <div class="button"><a href="photography-subPage.html" class="bottomView">VIEW</a></div>
-            </article>
-            <article id="web-design" class="image-container">
-                <div id="webDesign-img" class="image"></div>
-                <h1 id="bottomImg-headings">WEB DESIGN</h1>
-                <h2 id="bottomImg-subheadings">ウェブデザイン</h2>
-                <div class="button"><a href="webDesign-subPage.html" class="bottomView">VIEW</a></div>
-            </article>
+                <div id="unique_selling_points">
+                    <h2>04</h2>
+                    <h3>UNIQUE SELLING POINTS</h3>
+                    <p class="word-reveal">What sets me apart is my commitment to meticulous detail and a strong work ethic. I aim to create designs that are not only beautiful but also meaningful and impactful. At its core, my work is driven by a desire to make a difference - no matter how small - in someone else's life through creative expression.</p>
+                </div>
+                <a href="docs/JessicaPetzer_CV.pdf" download class="download_cv">→ VIEW FULL CV HERE</a>
+            </div> 
         </div>
     </main>
 
-    <footer id="footer_home">
+    <footer id="footer_about">
         <!--Website footer-->
         <div id="footerContent">
             <img src="images/misc_graphics/oxjLogo_favicon.png" alt="OxJ Website Logo">
@@ -139,13 +117,6 @@
     </script>
     <!-- Link to external JavaScript file -->
     <script src="js-assets/scripts.js"></script>
-
-    <div id="mobileWarning">
-        <img src="images/misc_graphics/construction.gif" alt="Construction">
-        <h1>OOPS...</h1>
-        <p>Apologies but Mobile and Tablet versions of this site are currently being updated.
-        For the best experience, please visit on a desktop. Thank you for understanding and have a great day!</p>
-    </div>
 
 </body>
 </html>
